--- a/TelerikMvcApp1/Views/Splitter/splitjs.cshtml
+++ b/TelerikMvcApp1/Views/Splitter/splitjs.cshtml
@@ -18,13 +18,13 @@
 
 
 <script>
-    $(document).ready(function () {
-        $("#verticalsplitter").kendoSplitter({
-            orientation: "vertical",
-            panes: [
-                { collapsible: true, size: "200px", scrollable: false },
-                { collapsible: true }
-            ]
-        });
-    });
+    //$(document).ready(function () {
+    //    $("#verticalsplitter").kendoSplitter({
+    //        orientation: "vertical",
+    //        panes: [
+    //            { collapsible: true, size: "200px", scrollable: false },
+    //            { collapsible: true }
+    //        ]
+    //    });
+    //});
 </script>
